Get ready for online usage

--- a/dash_age.ipynb
+++ b/dash_age.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install dash\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -18,7 +19,9 @@
     "from functools import reduce\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
-    "import plotly.io as pio"
+    "import plotly.io as pio\n",
+    "from dash import Dash, dcc, html, Input, Output, ALL, State\n",
+    "from dash.exceptions import PreventUpdate"
    ]
   },
   {
@@ -61,10 +64,13 @@
    "outputs": [],
    "source": [
     "from os.path import join\n",
-    "import preprocessing\n",
     "\n",
-    "data_path = 'data'\n",
-    "# data_path = 'https://raw.githubusercontent.com/nolasemon/slovakia-education/dev/data' # in case of using notebook as a file - requires internet\n",
+    "# repo = \"./\"\n",
+    "repo = \"https://raw.githubusercontent.com/nolasemon/slovakia-education/main\"\n",
+    "data_path = join(repo, \"data\")\n",
+    "!curl -O {join(repo, \"preprocessing.py\")}\n",
+    "\n",
+    "import preprocessing\n",
     "\n",
     "table_40 = pd.read_csv(join(data_path, 'RV_O_040_R_KR_SK.CSV'), sep=';')\n",
     "table_40 = preprocessing.preprocess(table_40)"
@@ -80,15 +86,6 @@
     "- `category_percent` - total/denominator is category\n",
     "- `chosen_percent` - chosen / all\n",
     "- `age_percent` - total/denominator is all at the same age"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_40"
    ]
   },
   {
@@ -285,10 +282,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%script true # Skip\n",
-    "from dash import Dash, dcc, html, Input, Output, ALL, State\n",
-    "from dash.exceptions import PreventUpdate\n",
-    "\n",
     "app = Dash(__name__)\n",
     "\n",
     "figure = go.Figure()\n",
