--- a/dash_geo.ipynb
+++ b/dash_geo.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install dash\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,6 +20,8 @@
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "import plotly.io as pio\n",
+    "from dash import Dash, dcc, html, Input, Output, State, ALL, MATCH\n",
+    "from dash.exceptions import PreventUpdate\n",
     "pd.options.display.float_format = '{:,.2f}'.format"
    ]
   },
@@ -46,10 +49,14 @@
    "outputs": [],
    "source": [
     "from os.path import join\n",
+    "\n",
+    "# repo = \"./\"\n",
+    "repo = \"https://raw.githubusercontent.com/nolasemon/slovakia-education/main\"\n",
+    "data_path = join(repo, \"data\")\n",
+    "!curl -O {join(repo, \"preprocessing.py\")}\n",
+    "\n",
     "import preprocessing\n",
     "\n",
-    "data_path = \"data\"\n",
-    "# data_path = 'https://raw.githubusercontent.com/nolasemon/slovakia-education/dev/data' # in case of using notebook as a file - requires internet\n",
     "table_names = [\n",
     "    \"RV_O_010_L_OK_SK.CSV\",\n",
     "    \"RV_O_040_L_OK_SK.CSV\",\n",
@@ -279,10 +286,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%script true # Skip\n",
-    "from dash import Dash, dcc, html, Input, Output, State, ALL, MATCH\n",
-    "from dash.exceptions import PreventUpdate\n",
-    "\n",
     "app = Dash(__name__)\n",
     "\n",
     "figure = go.Figure()\n",
